tests/NormalTests/paczka1/fuzzy1/36211341.err
Error in line 2: A584 S425 66,9
Error in line 5: PLKe S425 48,2
Error in line 14: fqIgOqCf A426 54,9
Error in line 27: fqIgOqCf S425 30,2
Error in line 33: fqIgOqCf A426 40,8
Error in line 38: fqIgOqCf A584 62,1
